--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -25,7 +25,7 @@
                         <li><a ui-sref="search">SEARCH</a></li>
                         <li><a href="#about">DAILY MATCHES</a></li>
                         <li><a ui-sref="messages">MESSAGES</a></li>
-                        <li><a ui-sref="settings">HELP</a></li>
+                        <li><a ui-sref="#">HELP</a></li>
                     </ul>
                 </div>
 
@@ -160,32 +160,16 @@
                                     <img alt="" class="img-circle" src="../assets/img/avatar9.jpg"/> </a>
                                 <ul class="dropdown-menu dropdown-menu-default">
                                     <li>
-                                        <a href="page_user_profile_1.html">
+                                        <a ui-sref="profile">
                                             <i class="icon-user"></i> My Profile </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_calendar.html">
-                                            <i class="icon-calendar"></i> My Calendar </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_inbox.html">
-                                            <i class="icon-envelope-open"></i> My Inbox
-                                            <span class="badge badge-danger"> 3 </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_todo_2.html">
-                                            <i class="icon-rocket"></i> My Tasks
-                                            <span class="badge badge-success"> 7 </span>
-                                        </a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="page_user_lock_1.html">
-                                            <i class="icon-lock"></i> Lock Screen </a>
+                                        <a ui-sref="settings">
+                                            <i class="icon-lock"></i> Settings </a>
                                     </li>
                                     <li>
-                                        <a href="page_user_login_1.html">
+                                        <a ui-sref="login">
                                             <i class="icon-key"></i> Log Out </a>
                                     </li>
                                 </ul>
