--- a/src/app/toolbar/profile/profileToolbar.html
+++ b/src/app/toolbar/profile/profileToolbar.html
@@ -1,117 +1,99 @@
 <div class="page-header navbar navbar-fixed-top" style="background-color:#00AC8D">
-    <!-- BEGIN HEADER INNER -->
-    <div class="page-header-inner ">
-        <!-- BEGIN LOGO -->
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="page-logo1">
-                    <a href="index.html">
-                        <img src="/assets/img/logo.png" style="width:90%;margin-top:20px" alt="logo"
-                             class="logo-default"/> </a>
+	<!-- BEGIN HEADER INNER -->
+	<div class="page-header-inner ">
+		<!-- BEGIN LOGO -->
+		<div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-10">
+				<div class="page-logo1">
+					<a href="index.html">
+						<img src="/assets/img/logo.png" style="width:90%;margin-top:20px" alt="logo" class="logo-default" /> </a>
 
-                </div>
-                <!-- END LOGO -->
-                <!-- BEGIN RESPONSIVE MENU TOGGLER -->
-                <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse"
-                   data-target=".navbar-collapse"> </a>
-                <!-- END RESPONSIVE MENU TOGGLER -->
-                <!-- BEGIN PAGE ACTIONS -->
-                <!-- DOC: Remove "hide" class to enable the page header actions -->
-                <div class="page-actions">
-                    <ul class="tool-link">
-                        <li><a ui-sref="app">HOME</a></li>
-                        <li><a ui-sref="search">SEARCH</a></li>
-                        <li><a ui-sref="matches">MATCHES</a></li>
-                        <li><a ui-sref="messages">INBOX</a></li>
-                        <li><a ui-sref="settings">MORE</a></li>
-                    </ul>
-                </div>
+				</div>
+				<!-- END LOGO -->
+				<!-- BEGIN RESPONSIVE MENU TOGGLER -->
+				<a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse"> </a>
+				<!-- END RESPONSIVE MENU TOGGLER -->
+				<!-- BEGIN PAGE ACTIONS -->
+				<!-- DOC: Remove "hide" class to enable the page header actions -->
+				<div class="page-actions">
+					<ul class="tool-link">
+						<li><a ui-sref="app">HOME</a></li>
+						<li><a ui-sref="matches">MATCHES</a></li>
+						<li><a ui-sref="search">SEARCH</a></li>
+						<li><a ui-sref="messages">INBOX</a></li>
+						<li><a ui-sref="#">MORE</a></li>
+					</ul>
+				</div>
 
-                <!-- END PAGE ACTIONS -->
-                <!-- BEGIN PAGE TOP -->
-                <div class="page-top">
-                    <div class="page-bar">
-                        <spans style="border-radius:10px;background-color: white;padding: 7px;font-size: 9px;margin-top:5px ">
-                            ACCOUNT TYPE:FREE | <span style="color: red">UPGRADE</span></spans>
-                    </div>
-                    <!-- BEGIN HEADER SEARCH BOX -->
-                    <!-- BEGIN TOP NAVIGATION MENU -->
-                    <div class="top-menu">
-                        <ul class="nav navbar-nav pull-right">
-                            <li class="separator hide"></li>
-                            <!-- BEGIN NOTIFICATION DROPDOWN -->
-                            <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-                            <li class="dropdown dropdown-user dropdown-dark">
-                                <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
-                                   data-hover="dropdown" data-close-others="true">
-                                    <!--<span class="username username-hide-on-mobile"> Doe </span>-->
-                                    <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
-                                    <img alt="" class="img-circle" src="../assets/img/avatar9.jpg"/> </a>
-                                <ul class="dropdown-menu dropdown-menu-default">
-                                    <li>
-                                        <a href="page_user_profile_1.html">
-                                            <i class="icon-user"></i> My Profile </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_calendar.html">
-                                            <i class="icon-calendar"></i> My Calendar </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_inbox.html">
-                                            <i class="icon-envelope-open"></i> My Inbox
-                                            <span class="badge badge-danger"> 3 </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_todo_2.html">
-                                            <i class="icon-rocket"></i> My Tasks
-                                            <span class="badge badge-success"> 7 </span>
-                                        </a>
-                                    </li>
-                                    <li class="divider"></li>
-                                    <li>
-                                        <a href="page_user_lock_1.html">
-                                            <i class="icon-lock"></i> Lock Screen </a>
-                                    </li>
-                                    <li>
-                                        <a href="page_user_login_1.html">
-                                            <i class="icon-key"></i> Log Out </a>
-                                    </li>
-                                </ul>
-                            </li>
+				<!-- END PAGE ACTIONS -->
+				<!-- BEGIN PAGE TOP -->
+				<div class="page-top">
+					<div class="page-bar">
+						<spans style="border-radius:10px;background-color: white;padding: 7px;font-size: 9px;margin-top:5px ">
+							ACCOUNT TYPE:FREE | <span style="color: red">UPGRADE</span></spans>
+					</div>
+					<!-- BEGIN HEADER SEARCH BOX -->
+					<!-- BEGIN TOP NAVIGATION MENU -->
+					<div class="top-menu">
+						<ul class="nav navbar-nav pull-right">
+							<li class="separator hide"></li>
+							<!-- BEGIN NOTIFICATION DROPDOWN -->
+							<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
+							<li class="dropdown dropdown-user dropdown-dark">
+								<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+									<!--<span class="username username-hide-on-mobile"> Doe </span>-->
+									<!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
+									<img alt="" class="img-circle" src="../assets/img/avatar9.jpg" /> </a>
+								<ul class="dropdown-menu dropdown-menu-default">
+									<li>
+										<a ui-sref="profile">
+											<i class="icon-user"></i> My Profile </a>
+									</li>
+									<li>
+										<a ui-sref="settings">
+											<i class="icon-lock"></i> Settings </a>
+									</li>
+									<li class="divider"></li>
 
-                        </ul>
-                    </div>
-                    <!-- END TOP NAVIGATION MENU -->
-                </div>
-            </div>
-            <div class="col-md-1"></div>
+									<li>
+										<a ui-sref="login">
+											<i class="icon-key"></i> Log Out </a>
+									</li>
+								</ul>
+							</li>
 
-            <!-- END PAGE TOP -->
-        </div>
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="main-heading">
-                    Settings
-                </div>
-                <!-- END LOGO -->
-                <!-- DOC: Remove "hide" class to enable the page header actions -->
-                <div class="main-heading-actions">
-                    <ul  class="main-tool-link uppercase">
-                        <li><a ng-class="{ activetoolbar: isActive('/profile')}" ui-sref="profile">Edit Profile</a></li>
-                        <li><a ng-class="{ activetoolbar: isActive('/profile/contact')}" ui-sref="profile.contact">Contact Details</a></li>
-                        <li><a ng-class="{ activetoolbar: isActive('/profile/managephotos')}" ui-sref="profile.photos">Manage Photos</a></li>
-                    </ul>
-                </div>
+						</ul>
+					</div>
+					<!-- END TOP NAVIGATION MENU -->
+				</div>
+			</div>
+			<div class="col-md-1"></div>
+
+			<!-- END PAGE TOP -->
+		</div>
+		<div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-10">
+				<div class="main-heading">
+					Settings
+				</div>
+				<!-- END LOGO -->
+				<!-- DOC: Remove "hide" class to enable the page header actions -->
+				<div class="main-heading-actions">
+					<ul class="main-tool-link uppercase">
+						<li><a ng-class="{ activetoolbar: isActive('/profile')}" ui-sref="profile">Edit Profile</a></li>
+						<li><a ng-class="{ activetoolbar: isActive('/profile/contact')}" ui-sref="profile.contact">Contact Details</a></li>
+						<li><a ng-class="{ activetoolbar: isActive('/profile/managephotos')}" ui-sref="profile.photos">Manage Photos</a></li>
+					</ul>
+				</div>
 
 
-            </div>
-            <div class="col-md-1"></div>
+			</div>
+			<div class="col-md-1"></div>
 
-            <!-- END PAGE TOP -->
-        </div>
-    </div>
-    <!-- END HEADER INNER -->
+			<!-- END PAGE TOP -->
+		</div>
+	</div>
+	<!-- END HEADER INNER -->
 </div>
