--- a/src/app/toolbar/settings/settingsToolbar.html
+++ b/src/app/toolbar/settings/settingsToolbar.html
@@ -1,197 +1,178 @@
 <div class="page-header navbar navbar-fixed-top" style="background-color:#00AC8D">
-    <!-- BEGIN HEADER INNER -->
-    <div class="page-header-inner ">
-        <!-- BEGIN LOGO -->
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="page-logo1">
-                    <a href="index.html">
-                        <img src="/assets/img/logo.png" style="width:90%;margin-top:20px" alt="logo" class="logo-default"/> </a>
+	<!-- BEGIN HEADER INNER -->
+	<div class="page-header-inner ">
+		<!-- BEGIN LOGO -->
+		<div class="row">
+			<div class="col-md-1"></div>
+			<div class="col-md-10">
+				<div class="page-logo1">
+					<a href="index.html">
+						<img src="/assets/img/logo.png" style="width:90%;margin-top:20px" alt="logo" class="logo-default" /> </a>
 
-                </div>
-                <!-- END LOGO -->
-                <!-- BEGIN RESPONSIVE MENU TOGGLER -->
-                <a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse"
-                   data-target=".navbar-collapse"> </a>
-                <!-- END RESPONSIVE MENU TOGGLER -->
-                <!-- BEGIN PAGE ACTIONS -->
-                <!-- DOC: Remove "hide" class to enable the page header actions -->
-                <div class="page-actions" >
-                    <ul class="tool-link">
-                        <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
-                        <li ><a  ui-sref="app">HOME</a></li>
-                        <li><a ui-sref="search">SEARCH</a></li>
-                        <li><a ui-sref="matches">MATCHES</a></li>
-                        <li><a ui-sref="messages">MESSAGES</a></li>
-                        <li><a ui-sref="settings">MORE</a></li>
-                    </ul>
-                </div>
+				</div>
+				<!-- END LOGO -->
+				<!-- BEGIN RESPONSIVE MENU TOGGLER -->
+				<a href="javascript:;" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse"> </a>
+				<!-- END RESPONSIVE MENU TOGGLER -->
+				<!-- BEGIN PAGE ACTIONS -->
+				<!-- DOC: Remove "hide" class to enable the page header actions -->
+				<div class="page-actions">
+					<ul class="tool-link">
+						<!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
+						<li><a ui-sref="app">HOME</a></li>
+						<li><a ui-sref="search">SEARCH</a></li>
+						<li><a ui-sref="matches">MATCHES</a></li>
+						<li><a ui-sref="messages">MESSAGES</a></li>
+						<li><a ui-sref="#">MORE</a></li>
+					</ul>
+				</div>
 
-                <!-- END PAGE ACTIONS -->
-                <!-- BEGIN PAGE TOP -->
-                <div class="page-top">
-                    <div class="page-bar">
-                        <spans style="border-radius:10px;background-color: white;padding: 7px;font-size: 9px;margin-top:5px ">ACCOUNT TYPE:FREE | <span style="color: red">UPGRADE</span></spans>
-                    </div>
-                    <!-- BEGIN HEADER SEARCH BOX -->
-                    <!-- BEGIN TOP NAVIGATION MENU -->
-                    <div class="top-menu">
-                        <ul class="nav navbar-nav pull-right">
-                            <li class="separator hide"></li>
-                            <!-- BEGIN NOTIFICATION DROPDOWN -->
-                            <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-                            <li class="dropdown dropdown-extended dropdown-notification dropdown-dark"
-                                id="header_notification_bar">
-                                <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
-                                   data-hover="dropdown" data-close-others="true">
-                                    <i class="icon-bell"></i>
-                                    <span class="badge badge-success"> 7 </span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li class="external">
-                                        <h3>
-                                            <span class="bold">12 pending</span> notifications</h3>
-                                        <a href="page_user_profile_1.html">view all</a>
-                                    </li>
-                                    <li>
-                                        <ul class="dropdown-menu-list scroller" style="height: 250px;"
-                                            data-handle-color="#637283">
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">just now</span>
-                                                    <span class="details">
+				<!-- END PAGE ACTIONS -->
+				<!-- BEGIN PAGE TOP -->
+				<div class="page-top">
+					<div class="page-bar">
+						<spans style="border-radius:10px;background-color: white;padding: 7px;font-size: 9px;margin-top:5px ">ACCOUNT TYPE:FREE | <span style="color: red">UPGRADE</span></spans>
+					</div>
+					<!-- BEGIN HEADER SEARCH BOX -->
+					<!-- BEGIN TOP NAVIGATION MENU -->
+					<div class="top-menu">
+						<ul class="nav navbar-nav pull-right">
+							<li class="separator hide"></li>
+							<!-- BEGIN NOTIFICATION DROPDOWN -->
+							<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
+							<li class="dropdown dropdown-extended dropdown-notification dropdown-dark" id="header_notification_bar">
+								<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+									<i class="icon-bell"></i>
+									<span class="badge badge-success"> 7 </span>
+								</a>
+								<ul class="dropdown-menu">
+									<li class="external">
+										<h3>
+											<span class="bold">12 pending</span> notifications</h3>
+										<a href="page_user_profile_1.html">view all</a>
+									</li>
+									<li>
+										<ul class="dropdown-menu-list scroller" style="height: 250px;" data-handle-color="#637283">
+											<li>
+												<a href="javascript:;">
+													<span class="time">just now</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-success">
                                                             <i class="fa fa-plus"></i>
                                                         </span> New user registered. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">3 mins</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">3 mins</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-danger">
                                                             <i class="fa fa-bolt"></i>
                                                         </span> Server #12 overloaded. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">10 mins</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">10 mins</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-warning">
                                                             <i class="fa fa-bell-o"></i>
                                                         </span> Server #2 not responding. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">14 hrs</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">14 hrs</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-info">
                                                             <i class="fa fa-bullhorn"></i>
                                                         </span> Application error. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">2 days</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">2 days</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-danger">
                                                             <i class="fa fa-bolt"></i>
                                                         </span> Database overloaded 68%. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">3 days</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">3 days</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-danger">
                                                             <i class="fa fa-bolt"></i>
                                                         </span> A user IP blocked. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">4 days</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">4 days</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-warning">
                                                             <i class="fa fa-bell-o"></i>
                                                         </span> Storage Server #4 not responding dfdfdfd. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">5 days</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">5 days</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-info">
                                                             <i class="fa fa-bullhorn"></i>
                                                         </span> System Error. </span>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="javascript:;">
-                                                    <span class="time">9 days</span>
-                                                    <span class="details">
+												</a>
+											</li>
+											<li>
+												<a href="javascript:;">
+													<span class="time">9 days</span>
+													<span class="details">
                                                         <span class="label label-sm label-icon label-danger">
                                                             <i class="fa fa-bolt"></i>
                                                         </span> Storage server failed. </span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <!-- END NOTIFICATION DROPDOWN -->
-                                                        <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-                            <li class="dropdown dropdown-user dropdown-dark">
-                                <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
-                                   data-hover="dropdown" data-close-others="true">
-                                    <!--<span class="username username-hide-on-mobile"> Doe </span>-->
-                                    <!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
-                                    <img alt="" class="img-circle" src="../assets/img/avatar9.jpg"/> </a>
-                                <ul class="dropdown-menu dropdown-menu-default">
-                                    <li>
-                                        <a href="page_user_profile_1.html">
-                                            <i class="icon-user"></i> My Profile </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_calendar.html">
-                                            <i class="icon-calendar"></i> My Calendar </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_inbox.html">
-                                            <i class="icon-envelope-open"></i> My Inbox
-                                            <span class="badge badge-danger"> 3 </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="app_todo_2.html">
-                                            <i class="icon-rocket"></i> My Tasks
-                                            <span class="badge badge-success"> 7 </span>
-                                        </a>
-                                    </li>
-                                    <li class="divider"></li>
-                                    <li>
-                                        <a href="page_user_lock_1.html">
-                                            <i class="icon-lock"></i> Lock Screen </a>
-                                    </li>
-                                    <li>
-                                        <a href="page_user_login_1.html">
-                                            <i class="icon-key"></i> Log Out </a>
-                                    </li>
-                                </ul>
-                            </li>
+												</a>
+											</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<!-- END NOTIFICATION DROPDOWN -->
+							<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
+							<li class="dropdown dropdown-user dropdown-dark">
+								<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+									<!--<span class="username username-hide-on-mobile"> Doe </span>-->
+									<!-- DOC: Do not remove below empty space(&nbsp;) as its purposely used -->
+									<img alt="" class="img-circle" src="../assets/img/avatar9.jpg" /> </a>
+								<ul class="dropdown-menu dropdown-menu-default">
+									<li>
+										<a ui-sref="profile">
+											<i class="icon-user"></i> My Profile </a>
+									</li>
 
-                        </ul>
-                    </div>
-                    <!-- END TOP NAVIGATION MENU -->
-                </div>
-            </div>
-            <div class="col-md-1"></div>
+									<li>
+										<a ui-sref="settings">
+											<i class="icon-lock"></i> Settings </a>
+									</li>
+									<li class="divider"></li>
 
-            <!-- END PAGE TOP -->
-        </div>
-    </div>
-    <!-- END HEADER INNER -->
+									<li>
+										<a ui-sref="login">
+											<i class="icon-key"></i> Log Out </a>
+									</li>
+								</ul>
+							</li>
+
+						</ul>
+					</div>
+					<!-- END TOP NAVIGATION MENU -->
+				</div>
+			</div>
+			<div class="col-md-1"></div>
+
+			<!-- END PAGE TOP -->
+		</div>
+	</div>
+	<!-- END HEADER INNER -->
 </div>
