--- a/src/app/navigation/message/sent/sentNavigation.html
+++ b/src/app/navigation/message/sent/sentNavigation.html
@@ -8,12 +8,12 @@
                             <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " >
                                     <span class="title"><b>Sent all</b></span>
                             </li>
-                            <li  ng-class="{ activateSettingNavBar: isActive('/settings')}" class="nav-item " >
+                            <li  ng-class="{ activateSettingNavBar: isActive('messages/sent')}" class="nav-item " >
                                 <a ui-sref="messages/sent" class="nav-link ">
                                     <span >SENT</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/settings/emailalerts')}" class="nav-item" id="pending">
+                            <li ng-class="{ activateSettingNavBar: isActive('messages/sent')}" class="nav-item" id="pending">
                                 <a ui-sref="messages/sent" class="nav-link ">
                                     <span class="title">Awaiting Replay</span>
                                 </a>
